# rustdata

./: .gitignore  Cargo.toml  Dockerfile  README.md  config-example.json  config.json
.devcontainer/: devcontainer.json
.github/workflows/: ci-image.yml
duckdb/: Cargo.toml
duckdb/src/: main.rs  quack.rs
eigen_types/: Cargo.toml
eigen_types/src/: lib.rs
pg/: Cargo.toml
pg/src/: main.rs  postgres.rs
pq/: Cargo.toml
pq/src/: main.rs  metadata.rs  parquet.rs
reward_json/: Cargo.toml
reward_json/abi/: IRewardsCoordinator.json
reward_json/src/: config.rs  main.rs
sqlite/: Cargo.toml
sqlite/src/: main.rs  sq.rs
