[workspace]
members = [ "eigen_types", "pg","pq", "reward_json", "duckdb", "sqlite"]
resolver = "2"

[workspace.dependencies]
eyre = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Ethereum
alloy = { version = "0.2.1", features = ["full"] }

# Eigen
eigen_types = { path = "eigen_types" }
