[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
eigen_types.workspace = true
tokio.workspace = true

rusqlite = { version = "0.32.0", features = ["bundled"] }
rust_decimal = {version = "1.10", features = ["tokio-pg"]}
